# aiida-gaussian-datatypes

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  AUTHORS.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.json  setup.py
.github/workflows/: deploy.yml  pre-commit.yml  test.yml
aiida_gaussian_datatypes/: __init__.py  groups.py  libraries.py  utils.py
aiida_gaussian_datatypes/basisset/: cli.py  data.py  utils.py
aiida_gaussian_datatypes/calc/: uncontract.py
aiida_gaussian_datatypes/console_scripts/: basisset_cli.py  data_cli.py  pseudopotential_cli.py
aiida_gaussian_datatypes/data/: __init__.py  basisset.py  basisset_utils.py  pseudopotential.py
aiida_gaussian_datatypes/fetcher/: cli.py
aiida_gaussian_datatypes/pseudopotential/: cli.py  data.py  utils.py
aiida_plugin_template/: code.py
aiida_plugin_template/calculations/: multiply.py
aiida_plugin_template/console_scripts/: data_cli.py
aiida_plugin_template/parsers/: multiply.py
docs/source/: conf.py  index.rst
docs/source/developer_guide/: index.rst
docs/source/module_guide/: data.rst  index.rst
docs/source/user_guide/: index.rst  reference.rst
tests/: BASIS_MOLOPT.H  BASIS_MOLOPT.Hf  BASIS_pob-TZVP.H  GAMESS_ECP.B  GTH_POTENTIALS.LiH  MOLOPT_PBE.LiH  conftest.py  cp2k_basisset_parsing.py  test_basisset_data.py  test_cli.py  test_cp2k_basisset_parsing.py  test_group.py  test_pseudo_data.py
