[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools>=40.8.0", "wheel", "reentry"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
